--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/index.html.twig
@@ -12,6 +12,9 @@
 </div>
 
 <div id="col-right">
-
+    <div class="side-bloc no-border">
+        {# Prochain Concert #}
+        {% include "AmlWebBundle::Default/evenement.html.twig" %}
+    </div>
 </div>
 {%- endblock body %}
