--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -27,8 +27,8 @@
 {% elseif entity.logo.webpath is defined %}
     <div rel="prettyPhoto" class="blog-visuel">
         <a rel="prettyPhoto" href="{{ asset(entity.logo.webpath) }}">
-            <img width="375" height="250" class="imagecache imagecache-visuel_blog_list"
-                 title="{{ entity.logo.title }}" src="{{ entity.logo.webpath | apply_filter('visuel_blog_list') }}">
+            <img width="375" height="250" class="imagecache imagecache-blog_list"
+                 title="{{ entity.logo.title }}" src="{{ entity.logo.webpath | apply_filter('blog_list') }}">
         </a>
     </div>
 {% endif %}
