--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
@@ -7,9 +7,9 @@
             {% if article.logo.webpath is defined %}
                 <div rel="prettyPhoto" class="blog-visuel">
                     <a rel="prettyPhoto" href="{{ asset(article.logo.webpath) }}" class="thumbnail">
-                        <img width="170" height="" class="imagecache imagecache-visuel_blog_list"
+                        <img width="170" class="imagecache imagecache-blog_thumbnail"
                              title="{{ article.logo.title }}"
-                             src="{{ article.logo.webpath | apply_filter('visuel_blog_list') }}">
+                             src="{{ article.logo.webpath | apply_filter('blog_thumbnail') }}">
                     </a>
                 </div>
             {% endif %}
