--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
@@ -22,9 +22,9 @@
     {% if lastBlogArticle.logo.webpath is defined %}
         <div rel="prettyPhoto" class="blog-visuel">
             <a rel="prettyPhoto" href="{{ asset(lastBlogArticle.logo.webpath) }}">
-                <img width="375" height="250" class="imagecache imagecache-visuel_blog_list"
+                <img width="375" height="250" class="imagecache imagecache-blog_list"
                      title="{{ lastBlogArticle.logo.title }}"
-                     src="{{ lastBlogArticle.logo.webpath | apply_filter('visuel_blog_list') }}">
+                     src="{{ lastBlogArticle.logo.webpath | apply_filter('blog_list') }}">
             </a>
         </div>
     {% endif %}
