N/A: [Agenda] create indepedant block "Next Concert"

--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,8 @@
     </div>
 
     <div id="col-right">
-
+        {# Next Concert #}
+        {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
     </div>
 {%- endblock body %}
 
