--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/show.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/show.html.twig
@@ -35,6 +35,7 @@
 </div>
 
 <div id="col-right">
-
+    {# Next Concert #}
+    {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
 </div>
 {% endblock body %}
