--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/index.html.twig
@@ -13,8 +13,8 @@
 
 <div id="col-right">
     <div class="side-bloc no-border">
-        {# Prochain Concert #}
-        {% include "AmlWebBundle::Default/evenement.html.twig" %}
+        {# Next Concert #}
+        {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
     </div>
 </div>
 {%- endblock body %}
