--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -45,7 +45,8 @@
 </div>
 
 <div id="col-right">
-
+    {# Next Concert #}
+    {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
 </div>
 {% endblock body %}
 
