--- a/src/Aml/Bundle/WebBundle/Resources/views/Discographie/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Discographie/index.html.twig
@@ -41,6 +41,7 @@
 </div>
 
 <div id="col-right">
-
+    {# Next Concert #}
+    {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
 </div>
 {% endblock body %}
