50: [webBunlde] minify css & js on front

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -28,7 +28,9 @@
     <div rel="prettyPhoto" class="blog-visuel">
         <a rel="prettyPhoto" href="{{ asset(entity.logo.webpath) }}">
             <img width="375" height="250" class="imagecache imagecache-blog_list"
-                 title="{{ entity.logo.title }}" src="{{ entity.logo.webpath | apply_filter('blog_list') }}">
+                 title="{{ entity.logo.title }}"
+                 src="{{ entity.logo.webpath | apply_filter('blog_list') }}"
+                 alt="{{ entity.logo.title }}"/>
         </a>
     </div>
 {% endif %}
