--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
@@ -2,7 +2,10 @@
 <div id="discographie-last-album-block">
 	<div class="disc-pochette-list">
         {% if lastAlbum.image.webpath is defined %}
-            <img src="{{ asset(lastAlbum.image.webpath) }}" alt="" title="{{ lastAlbum.image.title }}" class="imagecache imagecache-pochette-album" width="500" height="300">
+            <img src="{{ asset(lastAlbum.image.webpath) }}"
+                 alt="{{ lastAlbum.image.title }}"
+                 title="{{ lastAlbum.image.title }}"
+                 class="imagecache imagecache-pochette-album" width="500" height="300" />
         {% endif %}
 	</div>
 	<div class="disc-description-list">
