--- a/src/Aml/Bundle/WebBundle/Resources/public/css/main.css
+++ b/src/Aml/Bundle/WebBundle/Resources/public/css/main.css
@@ -1,6 +1,6 @@
 /* ------------------- STRUCTURE GLOBAL DU SITE ------------------ */
 body {
-    background: url("../images/general/fond.jpg") no-repeat fixed 57% 0 #000000;
+    background: url("/bundles/amlweb/images/general/fond.jpg") no-repeat fixed 57% 0 #000000;
     color: #FFFFFF;
     font-family: Arial;
     font-size: 15px;
@@ -31,12 +31,12 @@ body {
     float: left;
     height: auto;
     width: 100%;
-    background-image: url(../images/general/fond.jpeg);
+    background-image: url("/bundles/amlweb/images/general/fond.jpg");
     background-repeat: repeat-y;
 }
 
 #contenu {
-    background: url("../images/general/fond-contenu.png") no-repeat scroll 0 0 #FFFFFF;
+    background: url("/bundles/amlweb/images/general/fond-contenu.png") no-repeat scroll 0 0 #FFFFFF;
     color: #000000;
     float: left;
     min-height: 471px;
@@ -70,7 +70,7 @@ div.error, tr.error {
 
 #col-right {
     float: right;
-    background: #FFFFFF url(../images/general/fond-col-droite.png) no-repeat scroll 0 0;
+    background: #FFFFFF url("/bundles/amlweb/images/general/fond-col-droite.png") no-repeat scroll 0 0;
     width: 240px;
     min-height: 471px;
     font-size: 12px;
@@ -121,12 +121,12 @@ a.links-view-all {
 }
 
 a.purpule {
-    background: url("../images/boutons/btn_view_more.png") no-repeat scroll 120px 0 #FF0066;
+    background: url("/bundles/amlweb/images/boutons/btn_view_more.png") no-repeat scroll 120px 0 #FF0066;
     width: 133px;
 }
 
 a.black {
-    background: url("../images/boutons/btn_view_more_black.png") no-repeat scroll 127px 0 #000000;
+    background: url("/bundles/amlweb/images/boutons/btn_view_more_black.png") no-repeat scroll 127px 0 #000000;
     width: 140px;
 }
 
@@ -162,7 +162,7 @@ a.black {
 /*  ---  banniere ---  */
 #banniere {
 
-    background: url(../images/general/fond-ban-repeat.png) repeat-x scroll 0 0 #000000;
+    background: url("/bundles/amlweb/images/general/fond-ban-repeat.png") repeat-x scroll 0 0 #000000;
     position: relative;
     width: 100%;
     float: left;
@@ -182,7 +182,7 @@ a.black {
 
 /* --- fin banière --- */
 #intro {
-    background: url("../images/general/fond-intro-2.png") no-repeat scroll 0 0 #000000;
+    background: url("/bundles/amlweb/images/general/fond-intro-2.png") no-repeat scroll 0 0 #000000;
     width: 100%;
     height: 200px;
     float: left;
@@ -343,7 +343,7 @@ a.black {
 }
 
 #link-page-fb {
-    background: url("../images/pictos/facebook2.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/pictos/facebook2.png") no-repeat scroll 0 0 transparent;
     padding: 0 0 0 20px;
 }
 
@@ -771,7 +771,7 @@ tr.even, tr.odd {
     font-size: 12px;
     position: relative;
     width: 90px;
-    background: url("../images/boutons/form-submit-newsletter.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/boutons/form-submit-newsletter.png") no-repeat scroll 0 0 transparent;
     border: none;
     height: 22px;
     padding: 0 0 2px 0;
@@ -879,27 +879,27 @@ ul.espace-membres {
 }
 
 ul.espace-membres li a.member-agenda-link {
-    background: url("../images/icons/event128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/event128.png") no-repeat scroll 0 0 transparent;
 }
 
 ul.espace-membres li a.member-profil-link {
-    background: url("../images/icons/contact128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/contact128.png") no-repeat scroll 0 0 transparent;
 }
 
 ul.espace-membres li a.member-doc-link {
-    background: url("../images/icons/folder128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/folder128.png") no-repeat scroll 0 0 transparent;
 }
 
 ul.espace-membres li a.member-users-link {
-    background: url("../images/icons/members128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/members128.png") no-repeat scroll 0 0 transparent;
 }
 
 ul.espace-membres li a.member-history-link {
-    background: url("../images/icons/history128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/history128.png") no-repeat scroll 0 0 transparent;
 }
 
 ul.espace-membres li a.member-library-link {
-    background: url("../images/icons/library128.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/icons/library128.png") no-repeat scroll 0 0 transparent;
 }
 
 #espace-membre-left {
@@ -953,7 +953,7 @@ ul.espace-membres li a.member-library-link {
 }
 
 #aml-contact-form .btn-submit-contact {
-    background: url("../images/boutons/form-submit-newsletter.png") no-repeat scroll 0 0 transparent;
+    background: url("/bundles/amlweb/images/boutons/form-submit-newsletter.png") no-repeat scroll 0 0 transparent;
     border: medium none;
     float: right;
     font-size: 12px;
